--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #171717;
     color: #FFF;
     font-family: "DM Sans";
-    margin:0 100px;
+    margin: 0px 100px;
 
 }
 
@@ -15,14 +15,15 @@ body {
 }
 
 .nav>.nav-items {
-    display: flex;
     list-style: none;
-    justify-content: flex-end;
+    /* overflow: hidden; */
+    /* position: fixed; */
     font-size: 30px;
 }
 
 .nav>.nav-items li {
-    margin-left: 20px;
+    margin-left: 40px;
+    float: right;
 }
 
 .greeting {
@@ -47,14 +48,21 @@ body {
     width: 160px;
     height: 60px;
     background: #27AE60;
+    opacity: 1.0;
+    transition: 0.3s;
+    border: none;
 }
+.btn-primary:hover {opacity: 0.8}
+.btn-secondary:hover {opacity: 0.8}
 
 .btn-secondary {
     width: 160px;
-    height: 59px;
+    height: 60px;
     background: #171717;
     border: 1px solid var(--Gray-6, #F2F2F2);
     margin-left: 7px;
+    opacity: 1;
+    transition: 0.3s;
 
 
 }
@@ -90,7 +98,7 @@ body {
     margin: 70px 200px 0px;
 }
 
-.about-title {
+.section-title {
     color: #FFF;
     text-align: center;
     font-family: "DM Sans";
@@ -114,7 +122,75 @@ body {
     display: flex;
     justify-content: space-around;
 }
-.about-info > .name-and-icon{
+
+.about-info>.name-and-icon {
     flex-shrink: 0;
     text-align: center;
+}
+
+.what-i-do {
+    margin: 90px 0px 0px;
+}
+
+.skill-name {
+    color: #535353;
+    font-family: "DM Sans";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.skill-section {
+    display: flex;
+    justify-content: space-between;
+    margin: 90px 0px 0px;
+
+}
+
+.skill-info-container {
+    width: 350px;
+    height: 220px;
+    flex-shrink: 0;
+    background: #212121;
+    padding: 40px 0px 0px 60px;
+    /* align-items: center;
+    justify-content: center; */
+    /* border: 1px white solid; */
+    border-bottom: 5px solid #27AE60;
+}
+
+.my-skills {
+    margin: 90px 0px 0px;
+}
+
+
+.lang-rating {
+    color: var(--Gray-2, #4F4F4F);
+    text-align: center;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.lang-name {
+    color: var(--Green-2, #27AE60);
+    text-align: center;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+
+/* .skill .lang-rating, .lang-name {
+    border: 1px solid wheat;
+} */
+
+.all-skills {
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid var(--Gray-1, #333);
+    background: #212121;
+    padding: 5px;
+    
 }
