--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     margin-left: 40px;
     float: right;
 }
+
 .nav a {
     text-decoration: none;
     color: #FFF;
@@ -206,8 +207,8 @@ body {
     border: 1px solid var(--Gray-1, #333);
     background: #212121;
     padding: 5px;
-    
-    
+
+
 
 }
 
@@ -239,5 +240,60 @@ body {
     font-weight: 600;
 }
 
-.achievements-table tr:hover {background-color: grey;}
+.achievements-table tr:hover {
+    background-color: grey;
+}
 
+footer {
+    margin: 90px 0px 0px;
+    background: #212121;
+    padding: 20px;
+}
+
+.contact-text .text-1 {
+    color: #FFF;
+    font-family: "DM Sans";
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.contact-text .text-2 {
+    color: #FFF;
+    font-family: "DM Sans";
+    text-align: center;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.contact-text .text-3 {
+    color: #FFF;
+    font-family: "DM Sans";
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.contact-icons {
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+
+}
+
+.contact-icons a {
+    text-decoration: none;
+    color: #27AE60;
+}
+
+.contact-icons i:hover {
+    background-color: darkgreen;
+    border-radius: 5px
+}
