--- a/style.css
+++ b/style.css
@@ -122,10 +122,19 @@ body {
 }
 
 .about-description {
-    text-align: center;
+    text-align: justify;
+    text-align-last: left;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
+}
+
+.quotes {
+    color: grey;
+    font-weight: bold;
+}
+.special-quote-word {
+    color: rgb(160, 4, 4);
 }
 
 .about-info {
@@ -157,6 +166,7 @@ body {
     /* justify-content: space-around; */
     margin: 90px 0px 0px;
     justify-content: center;
+    width: 100%;
 
 }
 
